tree-sitter-openapi-json/test/corpus/json_description.txt
====================
JSON with description field
====================

{"info":{"description":"**Markdown** here."}}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (object
        (pair
          key: (string (string_content))
          value: (string (string_content)))))))
