tree-sitter-openapi-json/test/corpus/json_empty_and_escaping.txt
====================
Empty string and escape sequences
====================

{"description":"","note":"a\"b","multiline":"line1\nline2"}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (string))
    (pair
      key: (string (string_content))
      value: (string
        (string_content)
        (escape_sequence)
        (string_content)))
    (pair
      key: (string (string_content))
      value: (string
        (string_content)
        (escape_sequence)
        (string_content)))))
